<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:elevation="4dp">


    <TextView
        android:id="@+id/prov_covid"
        android:layout_width="wrap_content"
        android:text="@string/provinsi"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="5dp">

       <TextView
           android:layout_width="wrap_content"
           android:text="@string/jumlah_kasus"
           android:layout_height="wrap_content"
           android:layout_marginEnd="10dp"
           android:textSize="16sp"/>

       <TextView
           android:id="@+id/kasus_covid"
           android:layout_width="wrap_content"
           android:text="@string/_0"
           android:layout_height="wrap_content"
           android:textSize="16sp"/>

   </LinearLayout>
</LinearLayout>