<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".batik.DetailBatikActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/gambar_batik"
            android:layout_width="match_parent"
            android:src="@color/pink_dark"
            android:scaleType="centerCrop"
            android:layout_height="130dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:layout_marginTop="-20dp"
            android:layout_below="@id/gambar_batik"
            android:orientation="vertical"
            android:background="@drawable/bg_detail_activity">

            <TextView
                android:id="@+id/nama_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/nama"/>
            <TextView
                android:id="@+id/asal_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/asal"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/harga_tertinggi"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/harga_terendah"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/harga_tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/_0"/>

                <TextView
                    android:id="@+id/harga_rendah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/_0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/makna_batik"/>

                <TextView
                    android:id="@+id/makna_batik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/makna"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>