<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/bg_museum"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#7A000000">

        <TextView
            android:id="@+id/tv_nama_museum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_kota_museum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>
</RelativeLayout>