<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/covid"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#9C000000">

        <TextView
            android:id="@+id/propinsi_covid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/jumlah_kasus_prov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>
</RelativeLayout>