<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:paddingTop="10dp"
    android:background="@color/pink_dark"
    >

    <ImageView
        android:id="@+id/gambar_batik"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="#D8D8D8"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#6A000000"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nama_batik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_batik"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/asal_batik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asal_batik"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />

    </LinearLayout>
</RelativeLayout>