<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".museum.DetailMuseumActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/relative"
            layout="@layout/museum_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="50dp"
            android:layout_marginTop="-40dp"
            android:layout_below="@id/relative"
            android:orientation="vertical"
            android:background="@drawable/bg_detail_activity">

            <TextView
                android:id="@+id/propinsi_museum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/provinsi"/>

            <TextView
                android:id="@+id/alamat_museum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/alamat"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/tahun_berdiri"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text="@string/pengelola"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tahun_berdiri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/_0"/>

                <TextView
                    android:id="@+id/pengelola_museum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:text=""/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>