<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".covid.CovidActivity">

    <RelativeLayout
        android:id="@+id/covid_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp"
        android:visibility="gone"
        android:padding="20dp">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul_covid"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/headline"
            android:text="@string/update"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tanggal_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/headline"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/update"
            android:text="@string/tanggal"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/kasus_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/tanggal_update"
            android:orientation="vertical">

            <TextView
                android:id="@+id/jumlah_postif_all"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kasus_header"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/jumlah_postif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#F2B900"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/positif"
                    android:textAlignment="center"
                    android:textColor="#F2B900"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/jumlah_meninggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#F76353"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/meninggal"
                    android:textAlignment="center"
                    android:textColor="#F76353"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/jumlah_sembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="#00CC99"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/sembuh"
                    android:textAlignment="center"
                    android:textColor="#00CC99"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_covid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/covid_header"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_covid" />

    <ProgressBar
        android:id="@+id/progress_covid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>