<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/header"
        layout="@layout/main_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_marginTop="-40dp"
        android:background="@drawable/bg_main_activity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/ll_batik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_marginStart="0dp"
                android:background="@drawable/bg_top_left"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:elevation="1dp"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                android:padding="30dp">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/batik"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batik"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_musium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_top_right"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:layout_marginTop="1dp"
                android:elevation="1dp"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/museum"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/museum"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/ll_daerah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bottom_left"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="1dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:elevation="1dp"
                android:orientation="vertical"
                android:padding="30dp">


                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/daerah"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daerah"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_corona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_bottom_right"
                android:clickable="true"
                android:focusable="true"
                android:elevation="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/virus"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_19"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assigment_week_3"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</RelativeLayout>